--- a/scraperGlowzza/package.json
+++ b/scraperGlowzza/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "cheerio": "^1.2.0",
+    "cors": "^2.8.6",
     "firebase": "^12.10.0",
     "node-fetch": "^3.3.2"
   }
